use triple curly to prevent escaping

--- a/public/newsletter.hbs
+++ b/public/newsletter.hbs
@@ -63,7 +63,7 @@
   <div class="o-colors-body-text o-grid-container">
     <div class="o-grid-row">
       <div data-o-grid-colspan="Mone-half center" class="box">
-        <p class="o-typography-subhead">You are now unsubscribed from <strong>{{name}}</strong></p>
+        <p class="o-typography-subhead">You are now unsubscribed from <strong>{{{name}}}</strong></p>
         <p class="o-typography-body">If you unsubscribed by mistake, you can re-subscribe <a href="http://nbe.ft.com">here</a>.</p>
         <p class="o-typography-body">You may be subscribed to other emails from us, to manage your email preferences, <a href="//www.ft.com/myft/">go to myFT</a>.</p>        
       </div>
