update linkf or myft alerts

--- a/public/newsletter.hbs
+++ b/public/newsletter.hbs
@@ -50,7 +50,7 @@
 
 				<div class="o-header__top-column o-header__top-column--right">
 					<!--<div class="o-header__top-takeover"></div>-->
-					<a class="o-header__top-link o-header__top-link--myft" href="//www.ft.com/myft">
+					<a class="o-header__top-link o-header__top-link--myft" href="//www.ft.com/myft/alerts">
 						<span class="o-header__visually-hidden">myFT</span>
 					</a>
 				</div>
@@ -65,7 +65,7 @@
       <div data-o-grid-colspan="Mone-half center" class="box">
         <p class="o-typography-subhead">You are now unsubscribed from <strong>{{{name}}}</strong></p>
         <p class="o-typography-body">If you unsubscribed by mistake, you can re-subscribe <a href="http://nbe.ft.com">here</a>.</p>
-        <p class="o-typography-body">You may be subscribed to other emails from us, to manage your email preferences, <a href="//www.ft.com/myft/">go to myFT</a>.</p>        
+        <p class="o-typography-body">You may be subscribed to other emails from us, to manage your email preferences, <a href="//www.ft.com/myft/alerts">go to myFT</a>.</p>        
       </div>
     </div>
   </div>
