--- a/public/myft.hbs
+++ b/public/myft.hbs
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://www.ft.com/__origami/service/build/v2/bundles/css?modules=o-header,o-grid,o-buttons,o-typography" />
 
 		<!-- custom styles -->
-		<link rel="stylesheet" href="style/style.css" />
+		<link rel="stylesheet" href="/style.css" />
 	</head>
 	<body>
 		
