--- a/public/myft.hbs
+++ b/public/myft.hbs
@@ -43,10 +43,12 @@
 					<section class="confirmation">
 						
 						<img class="confirmation-tick" src="https://www.ft.com/__origami/service/image/v2/images/raw/fticon-v1%3Atick?source=tick&width=200&height=200&tint=%2300757F%2C%2300757F" alt="confimation tick">
+            {{#if topic}}
             <h1 class="o-typography-headline"><span class="bold">{{topic}}</span> has been added to myFT and myFT Digest email</h1>
+            {{/if}}
 						<p><a class="o-typography-link" href="https://www.ft.com/myft/alerts">Manage my email preferences</a></p>
 
-            <a href="https://www.ft.com/{{{topic}}}" class="o-buttons o-buttons--primary o-buttons--big">Explore stories on {{topic}}</a>
+            <a href="https://www.ft.com/{{{topic}}}" class="o-buttons o-buttons--primary o-buttons--big">Explore stories{{#if topic}} on {{/if}}{{topic}}</a>
 
 					</section>
 
