--- a/public/myft.hbs
+++ b/public/myft.hbs
@@ -19,7 +19,7 @@
 
 						<div class="o-header__top-column o-header__top-column--center">
 							<!--<div class="o-header__top-takeover"></div>-->
-							<a class="o-header__top-logo" href="/" title="Go to Financial Times homepage">
+							<a class="o-header__top-logo" href="https://www.ft.com" title="Go to Financial Times homepage">
 								<span class="o-header__visually-hidden">Financial Times</span>
 							</a>
 						</div>
