update stream URL

--- a/public/myft.hbs
+++ b/public/myft.hbs
@@ -48,7 +48,7 @@
             {{/if}}
 						<p><a class="o-typography-link" href="https://www.ft.com/myft/alerts">Manage my email preferences</a></p>
 
-            <a href="https://www.ft.com/streams/{{{conceptId}}}" class="o-buttons o-buttons--primary o-buttons--big">Explore stories{{#if topic}} on {{/if}}{{topic}}</a>
+            <a href="https://www.ft.com/stream/{{{conceptId}}}" class="o-buttons o-buttons--primary o-buttons--big">Explore stories{{#if topic}} on {{/if}}{{topic}}</a>
 
 					</section>
 
