Made changes to the nbe one click sign up confirmation page

--- a/public/nbe-signup.hbs
+++ b/public/nbe-signup.hbs
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://www.ft.com/__origami/service/build/v2/bundles/css?modules=o-header,o-grid,o-buttons,o-typography" />
 
 		<!-- custom styles -->
-		<link rel="stylesheet" href="/myft-topic/public/style/style.css" />
+		<link rel="stylesheet" href="style/style.css" />
 	</head>
 	<body>
 		
@@ -19,7 +19,7 @@
 
 						<div class="o-header__top-column o-header__top-column--center">
 							<!--<div class="o-header__top-takeover"></div>-->
-							<a class="o-header__top-logo" href="https://www.ft.com" title="Go to Financial Times homepage">
+							<a class="o-header__top-logo" href="/" title="Go to Financial Times homepage">
 								<span class="o-header__visually-hidden">Financial Times</span>
 							</a>
 						</div>
@@ -28,11 +28,7 @@
 				</div>
 			</div>
 		</header>
-		<div class="o-header__subbrand" data-o-header-subbrand="myFT">
-			<a class="o-header__subbrand-logo" href="https://www.ft.com/myft" title="Go to the Life&amp;Arts page">
-				<span class="o-header__visually-hidden">Life&amp;Arts</span>
-			</a>
-		</div>
+		
 
 		
 		<div class="o-grid-container">
@@ -40,15 +36,15 @@
 				<div data-o-grid-colspan="full-width">
 
 					<section class="confirmation">
-						
-            {{#if name}}
+						{{#if name}}
 						<img class="confirmation-tick" src="https://www.ft.com/__origami/service/image/v2/images/raw/fticon-v1%3Atick?source=tick&width=200&height=200&tint=%2300757F%2C%2300757F" alt="confimation tick">
-            <h1 class="o-typography-headline">You are now subscribed to <br><span class="bold">{{name}}</span></h1>
-            {{/if}}
+						<h1 class="o-typography-headline">You have now been subscribed to <span class="bold">{{name}}</span></h1>
+						<p><a class="o-typography-link" href="https://www.ft.com/myft/alerts">Manage my email preferences</a></p>
+						{{/if}}
+						<a href="https://www.ft.com/newsletters" class="o-buttons o-buttons--primary o-buttons--big">Explore other newsletters</a>
 
-            <a href="https://www.ft.com/newsletters" class="o-buttons o-buttons--primary o-buttons--big">Explore Newsletters</a>
+					</section>		
 
-					</section>
 
 				</div>
 			</div>
