--- a/public/newsletter.hbs
+++ b/public/newsletter.hbs
@@ -64,8 +64,9 @@
     <div class="o-grid-row">
       <div data-o-grid-colspan="Mone-half center" class="box">
         <p class="o-typography-subhead">You are now unsubscribed from <strong>{{{name}}}</strong></p>
-        <p class="o-typography-body">If you unsubscribed by mistake, you can re-subscribe <a href="http://nbe.ft.com">here</a>.</p>
-        <p class="o-typography-body">You may be subscribed to other emails from us, to manage your email preferences, <a href="//www.ft.com/myft/alerts">go to myFT</a>.</p>        
+        <p class="o-typography-body">You may be subscribed to other emails from the FT.</p>
+        <p class="o-typography-body">Manage the emails you receive in <a href="//www.ft.com/myft/alerts">Contact preferences</a>.</p>
+        <p class="o-typography-body">In most cases unsubscribe will happen immediately. However, please allow up to 72 hours for changes to take effect.</p> 
       </div>
     </div>
   </div>
